# embedded-docs

./: .cursorrules  MANIFEST.in  README.md  fix_markdown.ps1  fix_markdown.sh  pyproject.toml
.github/scripts/: check_md_links.py
.github/workflows/: check-md-links.yml  markdown-lint.yml  publish.yml
comfyui_embedded_docs/: __init__.py
comfyui_embedded_docs/docs/-SaveImage/: zh-TW.md
comfyui_embedded_docs/docs/APG/: ar.md  en.md  es.md  fr.md  ja.md  ko.md  pt-BR.md  ru.md  tr.md  zh-TW.md  zh.md
comfyui_embedded_docs/docs/AddNoise/: ar.md  en.md  es.md  fr.md  ja.md  ko.md  pt-BR.md  ru.md  tr.md  zh-TW.md  zh.md
comfyui_embedded_docs/docs/AddTextPrefix/: ar.md  en.md  es.md  fr.md  ja.md  ko.md  pt-BR.md  ru.md  tr.md  zh-TW.md  zh.md
comfyui_embedded_docs/docs/AddTextSuffix/: ar.md  en.md  es.md  fr.md  ja.md  ko.md  pt-BR.md  ru.md  tr.md  zh-TW.md  zh.md
comfyui_embedded_docs/docs/AdjustBrightness/: ar.md  en.md  es.md  fr.md  ja.md  ko.md  pt-BR.md  ru.md  tr.md  zh-TW.md  zh.md
comfyui_embedded_docs/docs/AdjustContrast/: ar.md  en.md  es.md  fr.md  ja.md  ko.md  pt-BR.md  ru.md  tr.md  zh-TW.md  zh.md
comfyui_embedded_docs/docs/AlignYourStepsScheduler/: ar.md  en.md  es.md  fr.md  ja.md  ko.md  pt-BR.md  ru.md  tr.md  zh-TW.md  zh.md
comfyui_embedded_docs/docs/AudioAdjustVolume/: ar.md  en.md  es.md  fr.md  ja.md  ko.md  pt-BR.md  ru.md  tr.md  zh-TW.md  zh.md
comfyui_embedded_docs/docs/AudioConcat/: ar.md  en.md  es.md  fr.md  ja.md  ko.md  pt-BR.md  ru.md  tr.md  zh-TW.md  zh.md
comfyui_embedded_docs/docs/AudioEncoderEncode/: ar.md  en.md  (+9 more)
(+6377 files in other folders)
