[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hanzo-studio-embedded-docs"
version = "0.4.1"
description = "Embedded documentation for Hanzo Studio nodes"
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0"
authors = [
    {name = "hanzoui"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
repository = "https://github.com/hanzoui/embedded-docs"

[tool.setuptools]
packages = ["hanzo_studio_embedded_docs"]

[tool.setuptools.package-data]
hanzo_studio_embedded_docs = ["docs/**/*.md", "docs/**/*.jpg", "docs/**/*.png", "docs/**/*.gif", "docs/**/*.webp"] 
